# ghc

./: .envrc  .gitignore  .gitmodules  CI.hs  Example.hs  Example15813.hs  README.md  Token.hs  aclocal.m4  azure-pipelines.yml  shell.nix
DA/Internal/: Desugar.hs
GHC/: Types.hs
GHC/Tuple/: Check.hs
compiler/: ghc.cabal.in
compiler/basicTypes/: Module.hs  Name.hs  OccName.hs  RdrName.hs  SrcLoc.hs  Unique.hs  Var.hs
compiler/cmm/: CmmParse.y  PprCmmExpr.hs
compiler/codeGen/: StgCmmExpr.hs
compiler/coreSyn/: CoreLint.hs  PprCore.hs
compiler/deSugar/: Check.hs  Coverage.hs  DsExpr.hs  DsMeta.hs  DsMonad.hs  Match.hs  MatchLit.hs  PmExpr.hs
compiler/dist-newstyle/cache/: compiler  config
compiler/ghci/: ByteCodeGen.hs
compiler/hieFile/: HieAst.hs
compiler/hsSyn/: Convert.hs  HsBinds.hs  HsDecls.hs  HsExpr.hs  HsExtension.hs  HsPat.hs  HsTypes.hs  HsUtils.hs
compiler/iface/: IfaceSyn.hs  IfaceType.hs  LoadIface.hs  MkIface.hs
compiler/main/: DynFlags.hs  DynFlags.hs-boot  ErrUtils.hs  GHC.hs
compiler/parser/: Lexer.x  Parser.y  RdrHsSyn.hs
compiler/prelude/: PrelInfo.hs  PrelNames.hs
compiler/rename/: RnBinds.hs  RnEnv.hs  RnExpr.hs  RnNames.hs  RnUnbound.hs  RnUtils.hs
compiler/simplStg/: RepType.hs
compiler/specialise/: Rules.hs
compiler/stgSyn/: StgLint.hs  StgSyn.hs
compiler/typecheck/: FamInst.hs  TcAnnotations.hs  TcArrows.hs  TcBinds.hs  TcDaml.hs  TcEnv.hs  TcErrors.hs  TcEvidence.hs  TcExpr.hs  TcExpr.hs-boot  TcFlatten.hs  TcGenDeriv.hs  TcHoleErrors.hs  TcHsSyn.hs  TcHsType.hs  TcInstDcls.hs  TcMType.hs  TcMatches.hs  TcPatSyn.hs  TcRnDriver.hs  TcRnExports.hs  TcRnMonad.hs  TcRnTypes.hs  TcRules.hs  TcSMonad.hs  TcSigs.hs  TcTyClsDecls.hs  TcUnify.hs
compiler/types/: Class.hs  Coercion.hs  TyCoRep.hs  Type.hs
compiler/utils/: ListT.hs  Outputable.hs  Util.hs
daml-smoke-tests/: Record_with_syntax.hs  Test0.hs
docs/users_guide/: conf.py
ghc/GHCi/: UI.hs
hadrian/: cabal.project.freeze  hadrian.cabal  stack.yaml
hadrian/src/Hadrian/Haskell/Cabal/: Parse.hs  Type.hs
libraries/base/: base.cabal
libraries/base/DA/Internal/: Desugar.hs
libraries/base/GHC/Daml/: Minimal.hs
libraries/ghc-boot-th/GHC/LanguageExtensions/: Type.hs
libraries/ghc-prim/: ghc-prim.cabal
libraries/ghc-prim/GHC/Tuple/: Check.hs
libraries/ghci/: ghci.cabal.in
libraries/ghci/GHCi/: CreateBCO.hs
mk/: build.mk
